--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.14"
-  }
+    "name": "api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "start": "nodemon src/index.js"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "nodemon": "^2.0.14"
+    }
 }
