--- a/api/.sequelizerc
+++ b/api/.sequelizerc
@@ -2,7 +2,7 @@ var path = require('path')
 
 module.exports = {
     'config': path.resolve('src', 'config', 'database.js'),
-    'migrations-path': path.resolve('src', 'migrations'),
+    'migrations-path': path.resolve('src', 'database', 'migrations'),
     'models-path': path.resolve('src', 'models'),
     'seeders-path': path.resolve('src', 'seeders'),
 }
