--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,10 @@
         "cors": "^2.8.5",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.3.2",
         "nodemon": "^2.0.14",
+        "require-directory": "^2.1.1",
         "sequelize": "^6.8.0"
     },
     "devDependencies": {
