--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
         "start": "nodemon src/index.js"
     },
     "dependencies": {
+        "axios": "^0.24.0",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -16,7 +17,8 @@
         "mysql2": "^2.3.2",
         "nodemon": "^2.0.14",
         "require-directory": "^2.1.1",
-        "sequelize": "^6.8.0"
+        "sequelize": "^6.8.0",
+        "socket.io": "^4.3.1"
     },
     "devDependencies": {
         "sequelize-cli": "^6.2.0"
