--- a/api/.sequelizerc
+++ b/api/.sequelizerc
@@ -4,5 +4,5 @@ module.exports = {
     'config': path.resolve('src', 'config', 'database.js'),
     'migrations-path': path.resolve('src', 'database', 'migrations'),
     'models-path': path.resolve('src', 'models'),
-    'seeders-path': path.resolve('src', 'seeders'),
+    'seeders-path': path.resolve('src', 'database','seeders'),
 }
